# PowerLLEL_Channel

./: CMakeLists.txt  LICENSE  README.md
examples/template/: build_th2a.sh  gptlnl  param.in
src/: CMakeLists.txt  decomp_2d_c.f90  gptlf.f90  main.f90  mod_calcRHS.f90  mod_calcVel.f90  mod_dataIO.f90  mod_fft.f90  mod_fft_mkl.f90  mod_hdf5.f90  mod_initFlow.f90  mod_mesh.f90  mod_monitor.f90  mod_mpi.f90  mod_parameters.f90  mod_poissonSolver.f90  mod_statistics.f90  mod_type.f90  mod_updateBound.f90  mod_utils.f90  mod_variables.f90
src/decomp2d/: decomp_2d.f90  transpose_x_to_y.f90  transpose_y_to_x.f90  transpose_y_to_z.f90  transpose_z_to_y.f90
src/postprocess/: Makefile  convert_precision.f90  main_postproc.f90  mod_bc_postproc.f90  mod_dataio_postproc.f90  mod_hdf5_postproc.f90  mod_mesh_postproc.f90  mod_param_postproc.f90  mod_variables_postproc.f90  mod_vortex_postproc.f90
src/src_c/: CMakeLists.txt  decomp_2d.c  decomp_2d.h  memory.h  mod_fft.c  mod_fft.h  mod_fft_fftw.inc  mod_fft_mkl.inc  mod_poisson_solver.c
utils/: gen_xdmf.sh  gen_xdmf_region.sh
